; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/oleaut32/extr_typelib.c_ITypeInfoImpl_Constructor.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/oleaut32/extr_typelib.c_ITypeInfoImpl_Constructor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_13__ = type { i32, i32*, i32, %struct.TYPE_12__, i64, %struct.TYPE_11__, %struct.TYPE_10__, %struct.TYPE_9__ }
%struct.TYPE_12__ = type { i8*, i8* }
%struct.TYPE_11__ = type { i32* }
%struct.TYPE_10__ = type { i32* }
%struct.TYPE_9__ = type { i32* }

@tinfvt = common dso_local global i32 0, align 4
@tcompvt = common dso_local global i32 0, align 4
@CreateTypeInfo2Vtbl = common dso_local global i32 0, align 4
@MEMBERID_NIL = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [6 x i8] c"(%p)\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_13__* ()* @ITypeInfoImpl_Constructor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_13__* @ITypeInfoImpl_Constructor() #0 {
  %1 = alloca %struct.TYPE_13__*, align 8
  %2 = call %struct.TYPE_13__* @heap_alloc_zero(i32 72)
  store %struct.TYPE_13__* %2, %struct.TYPE_13__** %1, align 8
  %3 = load %struct.TYPE_13__*, %struct.TYPE_13__** %1, align 8
  %4 = icmp ne %struct.TYPE_13__* %3, null
  br i1 %4, label %5, label %35

5:                                                ; preds = %0
  %6 = load %struct.TYPE_13__*, %struct.TYPE_13__** %1, align 8
  %7 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %6, i32 0, i32 7
  %8 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %7, i32 0, i32 0
  store i32* @tinfvt, i32** %8, align 8
  %9 = load %struct.TYPE_13__*, %struct.TYPE_13__** %1, align 8
  %10 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %9, i32 0, i32 6
  %11 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %10, i32 0, i32 0
  store i32* @tcompvt, i32** %11, align 8
  %12 = load %struct.TYPE_13__*, %struct.TYPE_13__** %1, align 8
  %13 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %12, i32 0, i32 5
  %14 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %13, i32 0, i32 0
  store i32* @CreateTypeInfo2Vtbl, i32** %14, align 8
  %15 = load %struct.TYPE_13__*, %struct.TYPE_13__** %1, align 8
  %16 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %15, i32 0, i32 4
  store i64 0, i64* %16, align 8
  %17 = load %struct.TYPE_13__*, %struct.TYPE_13__** %1, align 8
  %18 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %17, i32 0, i32 0
  store i32 -1, i32* %18, align 8
  %19 = load i8*, i8** @MEMBERID_NIL, align 8
  %20 = load %struct.TYPE_13__*, %struct.TYPE_13__** %1, align 8
  %21 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %20, i32 0, i32 3
  %22 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %21, i32 0, i32 1
  store i8* %19, i8** %22, align 8
  %23 = load i8*, i8** @MEMBERID_NIL, align 8
  %24 = load %struct.TYPE_13__*, %struct.TYPE_13__** %1, align 8
  %25 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %24, i32 0, i32 3
  %26 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %25, i32 0, i32 0
  store i8* %23, i8** %26, align 8
  %27 = load %struct.TYPE_13__*, %struct.TYPE_13__** %1, align 8
  %28 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %27, i32 0, i32 2
  %29 = load %struct.TYPE_13__*, %struct.TYPE_13__** %1, align 8
  %30 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %29, i32 0, i32 1
  store i32* %28, i32** %30, align 8
  %31 = load %struct.TYPE_13__*, %struct.TYPE_13__** %1, align 8
  %32 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %31, i32 0, i32 1
  %33 = load i32*, i32** %32, align 8
  %34 = call i32 @list_init(i32* %33)
  br label %35

35:                                               ; preds = %5, %0
  %36 = load %struct.TYPE_13__*, %struct.TYPE_13__** %1, align 8
  %37 = call i32 @TRACE(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), %struct.TYPE_13__* %36)
  %38 = load %struct.TYPE_13__*, %struct.TYPE_13__** %1, align 8
  ret %struct.TYPE_13__* %38
}

declare dso_local %struct.TYPE_13__* @heap_alloc_zero(i32) #1

declare dso_local i32 @list_init(i32*) #1

declare dso_local i32 @TRACE(i8*, %struct.TYPE_13__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
